--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                         <textarea name="message" cols="40" rows="10" required>Assunto:</textarea>
                     </div>
                     <br>
-                    <button class="botao" href="cool-biscochitos-d8b595.netlify.app/obrigado.html">enviar</button>
+                    <button class="botao" href="https://cool-biscochitos-d8b595.netlify.app/">enviar</button>
                     <input type="hidden" name="accessKey" value="6a0146d4-b303-455e-80db-9816b14c32eb">
-                    <input type="hidden" name="redirectTo" value="cool-biscochitos-d8b595.netlify.app/obrigado.html">
+                    <input type="hidden" name="redirectTo" value="https://cool-biscochitos-d8b595.netlify.app/">
                 </form>
             </div>
             </div>
