--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <input type="text" name="email" placeholder="Digite seu email" autocomplete="off" required>
                     <br>
                     <label for="phone">Tel:</label>
-                    <input type="text" name="telefone" class="phone" placeholder="Digite o nº do seu telefone"
+                    <input type="text" name="phone" class="phone" placeholder="Digite o nº do seu telefone"
                         autocomplete="off" required>
                     <br>
                     <div class="textarea">
